--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,32 @@
+/* =================index page table higth style start================ */
+.table_index_higth {
+    height: 340px;
+    overflow: auto;
+}
+
+.table_index_higth::-webkit-scrollbar {
+    width: 4px;
+    /* Set the width of the scrollbar */
+}
+
+.table_index_higth::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+    /* Set the color of the track */
+}
+
+.table_index_higth::-webkit-scrollbar-thumb {
+    background-color: #cacaca;
+    /* Set the color of the thumb */
+    border-radius: 6px;
+    /* Set the radius of the thumb */
+}
+
+.table_index_higth::-webkit-scrollbar-thumb:hover {
+    background-color: #b8b8b8;
+    /* Set the color of the thumb on hover */
+}
+/* =================index page table higth style And================ */
+
 .table_higth {
     height: 470px;
     overflow: auto;
